Instructor/target/.metadata/.plugins/org.eclipse.cdt.ui/001HelloWorld.build.log
16:33:03 **** Incremental Build of configuration Debug for project 001HelloWorld ****
make -j12 all 
arm-none-eabi-gcc "../Src/sysmem.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/sysmem.d" -MT"Src/sysmem.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/sysmem.o"
../Src/sysmem.c:63:1: error: unknown type name 'caddr_t'
   63 | caddr_t _sbrk(int incr)
      | ^~~~~~~
../Src/sysmem.c: In function '_sbrk':
../Src/sysmem.c:76:25: error: 'caddr_t' undeclared (first use in this function)
   76 |                 return (caddr_t) -1;
      |                         ^~~~~~~
../Src/sysmem.c:76:25: note: each undeclared identifier is reported only once for each function it appears in
../Src/sysmem.c:81:25: error: expected ';' before 'prev_heap_end'
   81 |         return (caddr_t) prev_heap_end;
      |                         ^~~~~~~~~~~~~~
      |                         ;
../Src/sysmem.c:67:15: warning: variable 'prev_heap_end' set but not used [-Wunused-but-set-variable]
   67 |         char *prev_heap_end;
      |               ^~~~~~~~~~~~~
../Src/sysmem.c:82:1: warning: control reaches end of non-void function [-Wreturn-type]
   82 | }
      | ^
make: *** [Src/subdir.mk:25: Src/sysmem.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

16:33:03 Build Failed. 4 errors, 2 warnings. (took 336ms)

